--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,5 +1,6 @@
-* Improve the draw_lines function
+DONE Improve the draw_lines function
 DONE Put some color filtering.
-- Fix some of the parameters of the pipeline in order to improve the results: MAKE THE YELLOW LINE LARGER.
+- Fix some of the parameters of the pipeline in order to improve the results: 
 - Put some code in order to produce output for the different intermediate images.
 - Write up the final report including the images.
+- Realitzar preguntes per entendre mes com tunejar els parametres-
